# maze-game

./: .gitignore  CMakeLists.txt  README.md  functions.h  game.cpp  main.c  makefile  maze.c
src/: game.cpp  game.h  main.cpp  maze.cpp  maze.h
